--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@
     font-family: "Roboto", sans-serif;
 }
 
+body {
+    margin: 0px;
+}
+
 main {
     position: relative;
-    background-color: white;
+    background-color: black;
     width: 400px;
     height: 582px;
     margin: auto;
