--- a/style.css
+++ b/style.css
@@ -7,13 +7,9 @@
     font-family: "Roboto", sans-serif;
 }
 
-body {
-    margin: 0px;
-}
-
 main {
     position: relative;
-    background-color: black;
+    background-color: white;
     width: 400px;
     height: 582px;
     margin: auto;
