Changed project structure: src folder added

--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@
 
 main {
     position: relative;
-    background-color: white;
+    background-color: black;
     width: 400px;
     height: 582px;
     margin: auto;
