--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
 
 main {
     position: relative;
-    background-color: white;
+    background-color: red;
     width: 400px;
     height: 582px;
     margin: auto;
